# django_template

./: .gitignore  README.md  Taskfile.yml  new_price.xlsx  pyproject.toml
application/: .dockerignore  .gitignore  database
application/apps/: urls.py
application/apps/posts/: admin.py  models.py
application/apps/posts/migrations/: 0001_initial.py  0002_auto_20230325_1703.py  0003_auto_20230325_1940.py  max_migration.txt
application/apps/users/: admin.py  managers.py  models.py
application/apps/users/migrations/: 0001_initial.py
application/config/: middleware.py  urls.py
application/config/core/: apps.py  backends.py  urls.py  utils.py  views.py
application/config/settings/: __init__.py
application/config/settings/components/: cache.py  common.py  i18n.py  logging.py  security.py  storage.py
application/config/settings/environments/: development.py  production.py
application/config/settings/utils/: django_toolbar.py
deploy/compose/: .env  docker-compose.dev.yml  docker-compose.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: ingress.yaml
deploy/helm/templates/application/: deployment.yaml  service.yaml
deploy/helm/templates/configs/: config_map.yaml  config_storage.yaml  secret.yaml  secret_storage.yaml
deploy/helm/templates/jobs/: collectstatic.yaml  (+1 more)
deploy/kubernetes/: config_map.yaml  config_storage.yaml  deployment.yaml  hpa.yaml  secret.yaml  secret_storage.yaml  service.yaml
deploy/presets/services/: postgres.yaml  redis.yaml
docker/: Dockerfile
tasks/: .env  ComposeTask.yml  DockerTask.yml  LocalTask.yml
(+9 files in other folders)
